# plonky2x-example

./: .env.example  .env.swp  .gitignore  Cargo.toml  README.md  challenge.json  succinct.json
circuit/: lib.rs  main.rs
contracts/: .gitignore  deploy.sh  deployAddition.sh  deployStorageProof.sh  foundry.toml  increment.sh  remappings.txt  requestAddition.sh  requestStorageProof.sh
contracts/script/: Addition.s.sol  Counter.s.sol  CrossChainStorage.s.sol
contracts/src/: Addition.sol  Counter.sol  CrossChainStorage.sol
contracts/test/: Addition.t.sol  Counter.t.sol  CrossChainStorage.t.sol  Mock.sol
